MA-547 hardening for create code system and concept map (#24)
* Remove some unused code.

* Return location header on create.  Remove unnecessary conversion.

* Return location header on create.  Remove unnecessary conversion.

* Add mapset tag to APIs.

* Throw exception if duplicate code system or concept map is loaded.
Remove unnecessary create index which were moved to application startup.

* Update unit tests reload exceptions.
Remove unnecessary index creations.

* Reduce memory usage.

* Change logging level.

* Fix test order and modify a test.

* Calculate parents, children, ancestors and descendants and update concepts.

* Add ECL tests back in.

* Update order.

* Add bulk update methods.

* Add search publisher test.

* Update queries involving publisher.

* Various units updates and fixes.

* Update CheckStyle due to CVE vulnerability.

* Clean up CheckStyle findings after version upgrade.

* Limit Trivy scan to runtime classpath